# rig

./: .gitignore  Cargo.toml  README.md  rig.grammar
Rig/rig_analyzer/: Cargo.toml
Rig/rig_analyzer/src/: lib.rs
Rig/rig_analyzer/src/ast_validator/: mod.rs
Rig/rig_analyzer/src/code_analyzer/: mod.rs
Rig/rig_ast/: Cargo.toml
Rig/rig_ast/src/: enum_variant.rs  expr.rs  function_prototype.rs  lib.rs  match_arms.rs  node.rs  op.rs  stmt.rs  struct_field.rs  token.rs  visibility.rs
Rig/rig_bytecode_compiler/: Cargo.toml
Rig/rig_driver/: Cargo.toml
Rig/rig_driver/src/: main.rs  run.rs
Rig/rig_error/: Cargo.toml
Rig/rig_error/src/: lib.rs  utils.rs
Rig/rig_lexer/: Cargo.toml
Rig/rig_lexer/src/: escape.rs  lib.rs  macros.rs
Rig/rig_lexer/tests/: lexer_tests.rs
Rig/rig_parser/: Cargo.toml
Rig/rig_parser/src/: expr.rs  lib.rs  stmt.rs
Rig/rig_project/: Cargo.toml
Rig/rig_project/src/: lib.rs  parsed_module.rs
Rig/rig_session/: Cargo.toml
Rig/rig_session/src/: lib.rs  module.rs
Rig/rig_span/: Cargo.toml
Rig/rig_span/src/: lib.rs
Rig/rig_typeck/: Cargo.toml
Rig/rig_typeck/src/: expr.rs  import.rs  lib.rs  stmt.rs
Rig/rig_types/: Cargo.toml
Rig/rig_types/src/: builtins.rs  checked_expr.rs  checked_stmt.rs  lib.rs
Rig/rig_utils/: Cargo.toml
Rig/rig_utils/src/: lib.rs
Rig/rig_vm/: Cargo.toml
compiler/rig_ast/: Cargo.toml
compiler/rig_ast/src/: expr.rs  lib.rs  path.rs  stmt.rs  token.rs
compiler/rig_driver/: Cargo.toml
compiler/rig_driver/src/: main.rs
compiler/rig_errors/: Cargo.toml
compiler/rig_errors/src/: lib.rs
compiler/rig_intern/: Cargo.toml
compiler/rig_intern/src/: lib.rs
compiler/rig_lexer/: Cargo.toml
compiler/rig_lexer/src/: lib.rs  token.rs
compiler/rig_parser/: Cargo.toml
compiler/rig_parser/src/: expr.rs  lib.rs  stmt.rs  ty.rs
compiler/rig_session/: Cargo.toml
compiler/rig_session/src/: lib.rs  module.rs
compiler/rig_span/: Cargo.toml
compiler/rig_span/src/: lib.rs
examples/: advanced.rig  simple.rig  weirdest_syntaxes_that_actually_work.rig
