[package]
name = "rig_driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.10", features = ["color", "suggestions", "derive"] }
colored = "2.0.0"
backtrace = "0.3.66"
rig_error = { path = "../rig_error" }
rig_span = { path = "../rig_span" }
rig_project = { path = "../rig_project" }
rig_session = { path = "../rig_session" }
rig_typeck = { path = "../rig_typeck" }
