[package]
name = "rig_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rig_ast = { path = "../rig_ast" }
rig_types = { path = "../rig_types" }
rig_lexer = { path = "../rig_lexer" }
rig_parser = { path = "../rig_parser" }
rig_error = { path = "../rig_error" }
