[package]
name = "rig_typeck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rig_project = { path = "../rig_project" }
rig_lexer = { path = "../rig_lexer" }
rig_parser = { path = "../rig_parser" }
rig_types = { path = "../rig_types" }
rig_ast = { path = "../rig_ast" }
rig_session = { path = "../rig_session" }
rig_span = { path = "../rig_span" }
rig_error = { path = "../rig_error" }
rig_utils = { path = "../rig_utils" }
